--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "tourist-mock-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,6 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+  "json-server": "^0.17.3"
   }
 }
